--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@100;300;400;500;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wdth,wght@120,100..700&display=swap" rel="stylesheet">
     <title>Juuten</title>
   </head>
   <body>
