--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <!-- OGP メタタグ -->
     <meta property="og:title" content="Juuten" />
     <meta property="og:description" content="4×4の盤面から数字を選んで10をつくろう!" />
-    <meta property="og:image" content="/logo-ogp.png" />
+    <meta property="og:image" content="https://10ten.trap.show/api/logo-ogp.png" />
     <meta property="og:url" content="https://10ten.trap.show/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Juuten" />
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Juuten" />
     <meta name="twitter:description" content="4×4の盤面から数字を選んで10をつくろう!" />
-    <meta name="twitter:image" content="/logo-ogp.png" />
+    <meta name="twitter:image" content="https://10ten.trap.show/api/logo-ogp.png" />
     
     <link
       href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@100;300;400;500;700;800;900&display=swap"
